--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js",
-    "debug": "nodemon --inspect src/index.js"
+    "start": "nodemon --inspect src/index.js"
   },
   "repository": {
     "type": "git",
